@@ -1,4 +1,0 @@
-  // generate sparse matrix representation of X
-  wX = csr_extract_w(X); 
-  vX = csr_extract_v(X); 
-  uX = csr_extract_u(X);
