@@ -1,3 +1,0 @@
-  vector[rows(csr_extract_w(X))] wX;
-  int vX[size(csr_extract_v(X))];
-  int uX[size(csr_extract_u(X))]; 
