@@ -14,6 +14,8 @@
       discussion about this feature.
       \item Allow using \code{offset} in formulas
       of non-linear and auxiliary parameters.
+      \item Allow sparse matrix multiplication in
+      non-linear and distributional models.
       \item Introduce method \code{control_params} to
       conveniently extract control parameters of the 
       NUTS sampler.
